# rommbuddy

./: .env.example  .gitignore  CLAUDE.md  design.pen  index.html  knip.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_artwork_unique.sql  003_roms_unique.sql  004_core_mappings_unique.sql  005_more_platforms.sql  006_emulator_type.sql  007_launchbox_and_hasheous.sql  008_multiple_screenshots.sql  009_hash_dedup.sql  010_dat_verification.sql  011_igdb_cache.sql  012_screenscraper.sql  013_remove_myrient.sql
src-tauri/src/: commands.rs  db.rs  dedup.rs  error.rs  hash.rs  lib.rs  main.rs  models.rs  platform_registry.rs  retroachievements.rs  saves.rs
src-tauri/src/entity/: artwork.rs  core_mappings.rs  dat_entries.rs  dat_files.rs  downloads.rs  hasheous_cache.rs  igdb_cache.rs  json_vec.rs  launchbox_games.rs  launchbox_images.rs  library.rs  metadata.rs  mod.rs  platforms.rs  roms.rs  screenscraper_cache.rs  source_roms.rs  sources.rs
src-tauri/src/metadata/: dat.rs  hasheous.rs  igdb.rs  launchbox.rs  libretro_thumbnails.rs  mod.rs  screenscraper.rs
src-tauri/src/sources/: local.rs  local_sync.rs  mod.rs  romm.rs  romm_platform_map.rs
src/components/: FavoriteButton.tsx  OperationProgressBanner.tsx  Pagination.tsx  PlatformFilter.tsx  ProgressBar.tsx  RomCard.tsx  RomGrid.tsx  RomList.tsx  RomRow.tsx  SaveFiles.tsx  ScreenshotModal.tsx  ScreenshotThumb.tsx  SearchInput.tsx  SectionHeading.tsx  Toast.tsx  ViewToggle.tsx
src/hooks/: useAchievements.ts  useAsyncInvoke.ts  useAsyncOperation.ts  useEnrichState.ts  (+5 more)
(+46 files in other folders)
